--- a/project/DelphiProfileUnitTest.dproj
+++ b/project/DelphiProfileUnitTest.dproj
@@ -98,11 +98,12 @@ $(PostBuildEvent)]]></PostBuildEvent>
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="..\test\Delphi.Profile.TraceTest.pas"/>
-        <DCCReference Include="..\test\Delphi.Profile.CallInfoTest.pas"/>
+        <DCCReference Include="..\test\Delphi.Profile.ScopeInfoTest.pas"/>
         <DCCReference Include="..\test\Delphi.Profile.AggregateInfoTest.pas"/>
         <DCCReference Include="..\test\Delphi.Profile.AggregateReportTest.pas"/>
-        <DCCReference Include="..\test\Delphi.Profile.CallReportTest.pas"/>
-        <DCCReference Include="..\test\Delphi.Profile.CallTracerTest.pas"/>
+        <DCCReference Include="..\test\Delphi.Profile.PerformanceReportTest.pas"/>
+        <DCCReference Include="..\test\Delphi.Profile.PerformanceTracerTest.pas"/>
+        <DCCReference Include="..\test\Delphi.Profile.PerformanceCounterTest.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
