--- a/project/DelphiProfilePkg.dproj
+++ b/project/DelphiProfilePkg.dproj
@@ -104,7 +104,7 @@ $(PreBuildEvent)]]></PreBuildEvent>
         <DCCReference Include="..\source\Delphi.Profile.PerformanceTracer.pas"/>
         <DCCReference Include="..\source\Delphi.Profile.Trace.pas"/>
         <DCCReference Include="..\source\Delphi.Profile.pas"/>
-        <DCCReference Include="..\source\Delphi.Profile.PerformanceCounter.pas"/>
+        <DCCReference Include="..\source\Delphi.Profile.PerformanceMetrics.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -150,6 +150,12 @@ $(PreBuildEvent)]]></PreBuildEvent>
                 <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\21.0\Bpl\DelphiProfilePkg.bpl" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>DelphiProfilePkg.bpl</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\build\Win64\Debug\lib\DelphiProfilePkg.rsm" Configuration="Debug" Class="DebugSymbols">
+                    <Platform Name="Win64">
+                        <RemoteName>DelphiProfilePkg.rsm</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
