--- a/project/DelphiProfileUnitTest.dproj
+++ b/project/DelphiProfileUnitTest.dproj
@@ -103,7 +103,7 @@ $(PostBuildEvent)]]></PostBuildEvent>
         <DCCReference Include="..\test\Delphi.Profile.AggregateReportTest.pas"/>
         <DCCReference Include="..\test\Delphi.Profile.PerformanceReportTest.pas"/>
         <DCCReference Include="..\test\Delphi.Profile.PerformanceTracerTest.pas"/>
-        <DCCReference Include="..\test\Delphi.Profile.PerformanceCounterTest.pas"/>
+        <DCCReference Include="..\test\Delphi.Profile.PerformanceMetricsTest.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
